--- a/Production/OrderList.xaml
+++ b/Production/OrderList.xaml
@@ -3,10 +3,166 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Production"
+        xmlns:local="clr-namespace:Production" 
+        d:DataContext="{d:DesignInstance Type=local:OrderListViewModel}"
         mc:Ignorable="d"
-        Title="OrderList" Height="450" Width="800">
-    <Grid>
-        
+        Title="Все заказы" Height="552.834" Width="936.929" 
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:i="http://schemas.microsoft.com/xaml/behaviors" ResizeMode="NoResize">
+    <Window.Resources>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontSize" Value="14" />
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="FontSize" Value="14" />
+        </Style>
+    </Window.Resources>
+    <Grid Margin="-2,0,-3.429,1.143">
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                <GradientStop Color="#FFF1FAEE" Offset="1"/>
+                <GradientStop Color="#FFA8DADC" Offset="0.182"/>
+                <GradientStop Color="#FF457B9D"/>
+                <GradientStop Color="#FFA8DADC" Offset="0.49"/>
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="374.857" />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+
+        <Border MinWidth="200" MaxWidth="800" MinHeight="200" MaxHeight="900" 
+                Margin="22,18,10,21.714" Background="#a8dadc" VerticalAlignment="Center" 
+                Padding="8" CornerRadius="20">
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="20" Color="Gray" ShadowDepth="2"/>
+            </Border.Effect>
+            <ListBox Grid.Column="10" ItemsSource="{Binding Orders}"
+                 SelectedItem="{Binding SelectedOrder}" Margin="2,2,-0.143,2.286">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Margin="5">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock FontSize="18" Grid.Column="0" Text="{Binding Path=Number}" />
+                            </Grid>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="30"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Text="{Binding Path=CustomerName}" Grid.Column="0"/>
+                                <TextBlock Grid.Column="1"/>
+                                <TextBlock Text="{Binding Path=TotalPrice}" Grid.Column="2" />
+                            </Grid>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="60"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Text="{Binding Path=ShopName}" Grid.Column="0"/>
+                                <TextBlock Text="{Binding Path=State}" Grid.Column="2"/>
+                            </Grid>
+
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </Border>
+
+        <Border MinWidth="200" MaxWidth="800" MinHeight="200" MaxHeight="900" Margin="10.143,15,22.143,107.857" 
+                Background="#FFF1FAEE" Padding="8" CornerRadius="20" Grid.Column="1">
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="20" Color="Gray" ShadowDepth="2"/>
+            </Border.Effect>
+            <StackPanel DataContext="{Binding SelectedOrder}" Margin="1,0,0.286,-0.286" Grid.Column="1">
+
+                <TextBlock Text="Информация о Заказе" Margin="10,0,0,0" Foreground="#FF457B9D" />
+
+                <Grid Margin="0,0,-0.286,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Заказ № " TextAlignment="Left" Margin="10,0,9.286,3.571" 
+                               FontFamily="Yu Gothic UI Semibold" FontSize="23" 
+                               Foreground="#FF457B9D" Grid.Column="0"/>
+                    <TextBlock x:Name="Num" Text="{Binding Number, UpdateSourceTrigger=PropertyChanged}" 
+                               TextAlignment="Left" FontFamily="Yu Gothic UI Semibold" 
+                               FontSize="23" Foreground="#FF457B9D" Grid.Column="1"/>
+                </Grid>
+                <Grid Margin="14,0,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Заказчик: " Height="22" HorizontalAlignment="Left" Width="Auto" 
+                               Foreground="#FF457B9D" FontSize="14" Grid.Column="0"/>
+                    <TextBlock x:Name="Customer" Text="{Binding CustomerName, UpdateSourceTrigger=PropertyChanged}"
+                               Height="22" HorizontalAlignment="Right" FontSize="14" 
+                               Grid.Column="1" Foreground="#FF457B9D" />
+                    <TextBlock Text=" (" Height="22" HorizontalAlignment="Left" Width="Auto" 
+                               Foreground="#FF457B9D" FontSize="14" Grid.Column="2"/>
+                    <TextBlock x:Name="Tel" Text="{Binding Tel, UpdateSourceTrigger=PropertyChanged}"
+                               Height="22" HorizontalAlignment="Right" FontSize="14" 
+                               Grid.Column="3" Foreground="#FF457B9D" />
+                    <TextBlock Text=")" Height="22" HorizontalAlignment="Left" Width="Auto" 
+                               Foreground="#FF457B9D" FontSize="14" Grid.Column="4"/>
+                </Grid>
+                <Grid Margin="14,0,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock x:Name="Date" Text="{Binding OrderDate, UpdateSourceTrigger=PropertyChanged}"
+                               Height="22" FontSize="14" Foreground="#FF457B9D" 
+                               Margin="0,0,-0.143,0" Grid.Column="0"/>
+                    <TextBlock Text=", " Height="22" HorizontalAlignment="Left" Width="Auto" 
+                               Foreground="#FF457B9D" FontSize="14" Grid.Column="1"/>
+                    <TextBlock x:Name="Shop" Text="{Binding ShopName, UpdateSourceTrigger=PropertyChanged}"
+                               Height="22" HorizontalAlignment="Right" FontSize="14" 
+                               Grid.Column="2" Foreground="#FF457B9D" />
+                </Grid>
+                <Grid Margin="14,0,10,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock x:Name="Total" Text="{Binding TotalPrice, UpdateSourceTrigger=PropertyChanged}"
+                               Height="22" HorizontalAlignment="Left" Width="Auto" 
+                               Foreground="#FF457B9D" FontSize="14" Grid.Column="0"/>
+                    <TextBlock Height="22" Grid.Column="1"/>
+                    <TextBlock x:Name="State" Text="{Binding State, UpdateSourceTrigger=PropertyChanged}"
+                               Height="22" HorizontalAlignment="Right" 
+                               FontSize="14" Grid.Column="2" Foreground="#FF457B9D" />
+                </Grid>
+                <ListView Name="ProductList" DataContext="{Binding Path=ProductList, UpdateSourceTrigger=PropertyChanged}">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=Name, UpdateSourceTrigger=PropertyChanged}" 
+                                            Width="130">Название</GridViewColumn>
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=Number, UpdateSourceTrigger=PropertyChanged}" 
+                                            Width="130">Номер</GridViewColumn>
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=Price, UpdateSourceTrigger=PropertyChanged}">
+                                Стоимость</GridViewColumn>
+                            <GridViewColumn DisplayMemberBinding="{Binding Path=Quantity, UpdateSourceTrigger=PropertyChanged}">
+                                Количество</GridViewColumn>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </StackPanel>
+        </Border>
+        <Button Content="Изменить" Height="31" FontSize="15" IsEnabled="True" Background="#FF457B9D" Width="102" BorderBrush="#FF457B9D" Margin="358.143,434,102.143,0" Grid.Column="1" Command="{Binding ChangeCommand}" VerticalAlignment="Top" Click="Button_Click_1"/>
+        <Button Content="Зарегистрировать сотрудника" Height="31" FontSize="15" Background="#FF457B9D" BorderBrush="#FF457B9D" Margin="32.143,434,0,0" Command="{Binding AddCommand}" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Left" Width="244" RenderTransformOrigin="0.514,0.3" Click="Button_Click"/>
+        <Button Content="Удалить заказ" Height="31" FontSize="15" Background="#e63946" BorderBrush="#e63946" Margin="32.143,482,0,0" Command="{Binding DelCommand, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Left" Width="134" RenderTransformOrigin="0.514,0.3" Click="Button_Click_2"/>
+
     </Grid>
 </Window>
